Criando o Menu de navegação

--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
   <body>
     <main>
       <section class="header-banner">
-        <header></header>
+        <header>
+          <nav>
+            <ul>
+              <li><a href="">Início</a></li>
+              <li><a href="">Sobre nós</a></li>
+              <li><a href="">Serviços</a></li>
+              <li><a href="">Benefícios</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Contatos</a></li>
+              <li>
+                <button>
+                  <a href="">Orçamento</a>
+                </button>
+              </li>
+            </ul>
+          </nav>
+        </header>
         <div class="banner">
           <div class="top-banner"></div>
           <div class="down-banner"></div>
