--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
   </head>
   <body>
     <main>
-      <section class="header-banner">
-        <header>
-          <nav>
-            <ul>
-              <li><a href="">Início</a></li>
-              <li><a href="">Sobre nós</a></li>
-              <li><a href="">Serviços</a></li>
-              <li><a href="">Benefícios</a></li>
-              <li><a href="">FAQ</a></li>
-              <li><a href="">Contatos</a></li>
-              <li>
-                <button>
-                  <a href="">Orçamento</a>
-                </button>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <div class="banner">
-          <div class="top-banner"></div>
-          <div class="down-banner"></div>
+      <header>
+        <nav>
+          <ul>
+            <li><a href="">Início</a></li>
+            <li><a href="">Sobre nós</a></li>
+            <li><a href="">Serviços</a></li>
+            <li><a href="">Benefícios</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Contatos</a></li>
+            <li>
+              <button>
+                <a href="">Orçamento</a>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <section class="banner">
+        <div class="banner-logo">
+          <img src="img/LOGO BRANCA.svg" alt="Banner principal" />
         </div>
         <div class="group-cards">
           <div class="cards"></div>
