Navegação do menu

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <header>
         <nav>
           <ul>
-            <li><a href="">Início</a></li>
-            <li><a href="">Sobre nós</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Benefícios</a></li>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Contatos</a></li>
+            <li><a href="#banner">Início</a></li>
+            <li><a href="#about-us">Sobre nós</a></li>
+            <li><a href="#services">Serviços</a></li>
+            <li><a href="#benefits">Benefícios</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#contacts">Contatos</a></li>
             <li>
               <button>
                 <a href="">Orçamento</a>
@@ -30,7 +30,7 @@
           </ul>
         </nav>
       </header>
-      <section class="banner">
+      <section id="banner" class="banner">
         <div class="banner-logo">
           <img src="img/LOGO BRANCA.svg" alt="Banner principal" />
         </div>
@@ -40,14 +40,14 @@
           <div class="cards"></div>
         </div>
       </section>
-      <section class="about-us"></section>
-      <section class="quote-call"></section>
-      <section class="services"></section>
-      <section class="benefits"></section>
-      <section class="why-us"></section>
-      <section class="faq"></section>
-      <section class="contacts"></section>
-      <section class="portifolio"></section>
+      <section id="about-us" class="about-us"></section>
+      <section id="quote-call" class="quote-call"></section>
+      <section id="services" class="services"></section>
+      <section id="benefits" class="benefits"></section>
+      <section id="why-us" class="why-us"></section>
+      <section id="faq" class="faq"></section>
+      <section id="contacts" class="contacts"></section>
+      <section id="portifolio" class="portifolio"></section>
       <footer></footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
