Novo banner inicial

--- a/index.html
+++ b/index.html
@@ -32,19 +32,39 @@
       </header>
       <section id="banner" class="banner">
         <div class="banner-logo">
-          <img src="img/LOGO BRANCA.svg" alt="Banner principal" />
+          <div class="logo-presentation">
+            <div class="logo-img">
+              <img src="img/Vector.png" alt="Logo da marca" />
+            </div>
+            <div class="text-presentation">
+              <h1>
+                Bem-vindo à Ype Podas - Especialistas em Podas e Supressões de
+                Árvores!
+              </h1>
+              <p>
+                Na Ype Podas, transformamos sua visão em realidade. Com
+                experiência e paixão, oferecemos serviços de poda de árvores que
+                elevam a estética e a saúde de seus espaços ao ar livre.
+              </p>
+              <button>Faça seu Orçamento</button>
+            </div>
+          </div>
+
+          <div class="banner-img">
+            <img src="img/SERRA-BANNER.png" alt="Banner principal" />
+          </div>
         </div>
-        <div class="group-cards">
+        <!-- <div class="group-cards">
           <div class="cards"></div>
           <div class="cards"></div>
           <div class="cards"></div>
-        </div>
+        </div> -->
       </section>
       <section id="about-us" class="about-us"></section>
       <section id="quote-call" class="quote-call"></section>
       <section id="services" class="services"></section>
-      <section id="benefits" class="benefits"></section>
-      <section id="why-us" class="why-us"></section>
+      <section id="quote-call-ii" class="benefits"></section>
+      <section id="benefits" class="why-us"></section>
       <section id="faq" class="faq"></section>
       <section id="contacts" class="contacts"></section>
       <section id="portifolio" class="portifolio"></section>
