--- a/index.html
+++ b/index.html
@@ -54,17 +54,47 @@
             <img src="img/SERRA-BANNER.png" alt="Banner principal" />
           </div>
         </div>
-        <!-- <div class="group-cards">
-          <div class="cards"></div>
-          <div class="cards"></div>
-          <div class="cards"></div>
-        </div> -->
+      </section>
+
+      <section class="services-locations">
+        <h1>Locais de Serviço</h1>
+
+        <div class="group-cards">
+          <div class="cards">
+            <img
+              src="img/LOCAIS_ATENDIMENTOLOCAL-2_CASA.png"
+              alt="Local de atendimento"
+            />
+            <p>Residencial</p>
+          </div>
+          <div class="cards">
+            <img
+              src="img/LOCAIS_ATENDIMENTOLOCAL-3_INDUSTRIA.png"
+              alt="Local de atendimento"
+            />
+            <p>Industrial</p>
+          </div>
+          <div class="cards">
+            <img
+              src="img/LOCAIS_ATENDIMENTOLOCAL-1_ESCOLA.png"
+              alt="Local de atentimento"
+            />
+            <p>Institucional</p>
+          </div>
+        </div>
+
+        <p>
+          A <strong>Ype Podas</strong> está presente em diversas localidades,
+          pronta para levar os benefícios da poda de árvores até você. Confira
+          nossos locais de atendimento e descubra como podemos ajudar a cuidar
+          das suas árvores.
+        </p>
       </section>
       <section id="about-us" class="about-us"></section>
       <section id="quote-call" class="quote-call"></section>
       <section id="services" class="services"></section>
-      <section id="quote-call-ii" class="benefits"></section>
-      <section id="benefits" class="why-us"></section>
+      <section id="quote-call-ii" class="quote-call-ii"></section>
+      <section id="benefits" class="benefits"></section>
       <section id="faq" class="faq"></section>
       <section id="contacts" class="contacts"></section>
       <section id="portifolio" class="portifolio"></section>
