Seção Sobre nós

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           </ul>
         </nav>
       </header>
+
       <section id="banner" class="banner">
         <div class="banner-logo">
           <div class="logo-presentation">
@@ -90,7 +91,23 @@
           das suas árvores.
         </p>
       </section>
-      <section id="about-us" class="about-us"></section>
+
+      <section id="about-us" class="about-us">
+        <div class="text-about-us">
+          <article>
+            <h1>Sobre nós</h1>
+            <p>
+              Somos a Ype Podas, uma equipe dedicada apaixonada por árvores e
+              comprometida em proporcionar serviços de poda excepcionais.
+              <br /><br />
+              Desde 2023, temos deixado um legado verde por onde passamos.
+              Conheça nossa história e nossa missão de tornar o mundo mais
+              verde, um galho de cada vez.
+            </p>
+          </article>
+        </div>
+        <div class="img-about-us"><img src="img/sobre-nos.png" alt="" /></div>
+      </section>
       <section id="quote-call" class="quote-call"></section>
       <section id="services" class="services"></section>
       <section id="quote-call-ii" class="quote-call-ii"></section>
