Seção Chamada Orçamento I

--- a/index.html
+++ b/index.html
@@ -108,7 +108,24 @@
         </div>
         <div class="img-about-us"><img src="img/sobre-nos.png" alt="" /></div>
       </section>
-      <section id="quote-call" class="quote-call"></section>
+
+      <section id="quote-call" class="quote-call">
+        <div class="content-quote-call">
+          <article>
+            <p>Descubra quanto custa dar vida nova às suas árvores!</p>
+            <p>
+              Peça um <strong>orçamento personalizado</strong> da Ype Podas.
+            </p>
+            <p>
+              Nossa equipe está pronta para oferecer soluções acessíveis e
+              eficientes para suas necessidades de poda.
+            </p>
+          </article>
+
+          <button>Solicitar Orçamento</button>
+        </div>
+      </section>
+
       <section id="services" class="services"></section>
       <section id="quote-call-ii" class="quote-call-ii"></section>
       <section id="benefits" class="benefits"></section>
