--- a/index.html
+++ b/index.html
@@ -126,7 +126,58 @@
         </div>
       </section>
 
-      <section id="services" class="services"></section>
+      <section id="services" class="services">
+        <div class="content-services">
+          <h1>Serviços</h1>
+          <div class="group-cards-services">
+            <div class="cards-services">
+              <p>Poda Estética</p>
+              <img
+                src="img/BANNER_SERVIÇOS--Poda-de-Manutenção.png"
+                alt="Serviço Oferecido"
+              />
+              <div class="circle-services"></div>
+            </div>
+            <div class="cards-services">
+              <p>Poda de Manutenção</p>
+              <img
+                src="img/BANNER_SERVIÇOS--Poda-de-Manutenção.png"
+                alt="Serviço Oferecido"
+              />
+              <div class="circle-services"></div>
+            </div>
+            <div class="cards-services">
+              <p>Remoção de Galhos Perigosos</p>
+              <img
+                src="img/BANNER_SERVIÇOS--Remoção-de-Galhos-Perigosos.png"
+                alt="Serviço Oferecido"
+              />
+              <div class="circle-services"></div>
+            </div>
+            <div class="cards-services">
+              <p>Remoção de Árvores</p>
+              <img
+                src="img/BANNER_SERVIÇOS--Remoção-de-Árvores.png"
+                alt="Serviço Oferecido"
+              />
+              <div class="circle-services"></div>
+            </div>
+          </div>
+          <article>
+            <p>
+              Cada árvore tem uma história, e nós queremos ajudar a contar a
+              melhor versão dela.
+            </p>
+            <p>
+              <strong
+                >Explore nossos serviços para descobrir como podemos cuidar das
+                suas árvores.</strong
+              >
+            </p>
+          </article>
+        </div>
+      </section>
+
       <section id="quote-call-ii" class="quote-call-ii"></section>
       <section id="benefits" class="benefits"></section>
       <section id="faq" class="faq"></section>
