--- a/index.html
+++ b/index.html
@@ -179,7 +179,52 @@
       </section>
 
       <section id="quote-call-ii" class="quote-call-ii"></section>
-      <section id="benefits" class="benefits"></section>
+
+      <section id="benefits" class="benefits">
+        <div class="content-benefits">
+          <h1>Benefícios</h1>
+
+          <div class="group-cards-benefits">
+            <div class="cards-benefits">
+              <p>Profissionais Especializados</p>
+              <img
+                src="img/BENEFÍCIOS_BANNER--Profissionais-Especializados.png"
+                alt="Banner Benefícios"
+              />
+              <div class="circle-benefits"></div>
+            </div>
+
+            <div class="cards-benefits">
+              <p>Compromisso Ambiental</p>
+              <img
+                src="img/BENEFÍCIOS_BANNER--Compromisso-Ambiental.png"
+                alt="Banner Benefícios"
+              />
+              <div class="circle-benefits"></div>
+            </div>
+
+            <div class="cards-benefits">
+              <p>
+                Resultados <br />
+                Duradouros
+              </p>
+              <img
+                src="img/BENEFÍCIOS_BANNER--Resultados-Duradouros.png"
+                alt="Banner Benefícios"
+              />
+              <div class="circle-benefits"></div>
+            </div>
+          </div>
+
+          <article>
+            <p>
+              <strong>Cuide do seu ambiente verde</strong> com uma equipe que
+              entende e ama árvores.
+            </p>
+          </article>
+        </div>
+      </section>
+
       <section id="faq" class="faq"></section>
       <section id="contacts" class="contacts"></section>
       <section id="portifolio" class="portifolio"></section>
