--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <link
       rel="shortcut icon"
@@ -228,8 +229,78 @@
       <section id="faq" class="faq"></section>
       <section id="contacts" class="contacts"></section>
       <section id="portifolio" class="portifolio"></section>
-      <footer></footer>
+
+      <footer>
+        <div class="content-footer">
+          <div class="about-us-footer">
+            <img src="img/Logo-branca-P.svg" alt="Logo da marca" />
+
+            <article>
+              <p>
+                Somos a Ype Podas, uma equipe dedicada apaixonada por árvores e
+                comprometida em proporcionar serviços de poda excepcionais.
+              </p>
+              <br />
+              <p>
+                Desde 2023, temos deixado um legado verde por onde passamos.
+                Conheça nossa história e nossa missão de tornar o mundo mais
+                verde, um galho de cada vez.
+              </p>
+            </article>
+
+            <div>
+              <i data-feather="instagram"></i>
+              <i data-feather="phone"></i>
+              <i data-feather="circle"></i>
+              <i data-feather="mail"></i>
+            </div>
+          </div>
+
+          <div class="services-footer">
+            <ul>
+              <li><strong>Nossos Serviços</strong></li>
+              <li><span>Poda Estética</span></li>
+              <li><span>Poda de Manutenção</span></li>
+              <li><span>Remoção de Galhos Perigosos</span></li>
+              <li><span>Remoção de Árvores</span></li>
+            </ul>
+          </div>
+
+          <div class="nav-footer">
+            <nav>
+              <ul>
+                <li><strong>Links Rápidos</strong></li>
+                <li>
+                  <a href=""><span>Início</span></a>
+                </li>
+                <li>
+                  <a href=""><span>Locais de Serviços</span></a>
+                </li>
+                <li>
+                  <a href=""><span>Sobre Nós</span></a>
+                </li>
+                <li>
+                  <a href=""><span>Orçamentos</span></a>
+                </li>
+                <li>
+                  <a href=""><span>Benefícios</span></a>
+                </li>
+                <li>
+                  <a href=""><span>FAQ</span></a>
+                </li>
+                <li>
+                  <a href=""><span>Portifólio</span></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="copy"></div>
+      </footer>
     </main>
+    <script>
+      feather.replace();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
   </body>
 </html>
