--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="circle-services"></div>
             </div>
             <div class="cards-services">
-              <p>Remoção de Árvores</p>
+              <p>Supressão de Árvores</p>
               <img
                 src="img/BANNER_SERVIÇOS--Remoção-de-Árvores.png"
                 alt="Serviço Oferecido"
@@ -226,7 +226,90 @@
         </div>
       </section>
 
-      <section id="faq" class="faq"></section>
+      <section id="faq" class="faq">
+        <div class="faq-content">
+          <div class="faq-text">
+            <article>
+              <h1>
+                Perguntas <br />
+                Frequentes
+              </h1>
+              <p>Tire suas dúvidas sobre poda de árvores!</p>
+
+              <p>
+                Aqui, respondemos às perguntas mais frequentes que nossos
+                clientes têm.
+              </p>
+
+              <p>
+                Se ainda precisar de mais informações, estamos à disposição.
+              </p>
+            </article>
+          </div>
+          <div class="faq-questions">
+            <div class="question">
+              <div class="question-content">
+                <p>Lorem ipsum dolor sit amet consectetur?</p>
+
+                <img src="img/chevron-down.svg" class="down" alt="" />
+              </div>
+
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                  cumque soluta autem quis, exercitationem repudiandae nemo. 001
+                </p>
+              </div>
+            </div>
+
+            <div class="question">
+              <div class="question-content">
+                <p>Lorem ipsum dolor sit amet consectetur?</p>
+
+                <img src="img/chevron-down.svg" class="down" alt="" />
+              </div>
+
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                </p>
+              </div>
+            </div>
+
+            <div class="question">
+              <div class="question-content">
+                <p>Lorem ipsum dolor sit amet consectetur?</p>
+
+                <img src="img/chevron-down.svg" class="down" alt="" />
+              </div>
+
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                </p>
+              </div>
+            </div>
+
+            <div class="question">
+              <div class="question-content">
+                <p>Lorem ipsum dolor sit amet consectetur?</p>
+
+                <img src="img/chevron-down.svg" class="down" alt="" />
+              </div>
+
+              <div class="answer">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
+                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="contacts" class="contacts"></section>
       <section id="portifolio" class="portifolio"></section>
 
@@ -302,5 +385,6 @@
       feather.replace();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
+    <script src="main.js"></script>
   </body>
 </html>
