--- a/index.html
+++ b/index.html
@@ -249,60 +249,60 @@
           <div class="faq-questions">
             <div class="question">
               <div class="question-content">
-                <p>Lorem ipsum dolor sit amet consectetur?</p>
+                <p>
+                  O descarte dos resíduos estão incluidos nos serviços de podas
+                  e supressão?
+                </p>
 
                 <img src="img/chevron-down.svg" class="down" alt="" />
               </div>
 
               <div class="answer">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                  cumque soluta autem quis, exercitationem repudiandae nemo. 001
+                  Não, estes dois trabalhos são oferecidos individualmente. Caso
+                  haja a necessidade e o contratante tenha o interesse da
+                  remoção desses resíduos, é preciso manifestar o desejo da
+                  realização deste trabalho, ciente que será cobrado um valor a
+                  parte.
                 </p>
               </div>
             </div>
 
             <div class="question">
               <div class="question-content">
-                <p>Lorem ipsum dolor sit amet consectetur?</p>
+                <p>Como é realizado o orçamento ?</p>
 
                 <img src="img/chevron-down.svg" class="down" alt="" />
               </div>
 
               <div class="answer">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                  Após a solicitação de um orçamento, será realizada uma visita
+                  ao local onde o serviço será prestado, com o intuito de
+                  avaliar a complexidade do terreno, corte ou poda, e os riscos
+                  e cuidados a serem considerados. Ao encerrar essa análise,
+                  será possível informar ao cliente um orçamento com todas as
+                  informações necessárias para a realização do serviço.
                 </p>
               </div>
             </div>
 
             <div class="question">
               <div class="question-content">
-                <p>Lorem ipsum dolor sit amet consectetur?</p>
-
-                <img src="img/chevron-down.svg" class="down" alt="" />
-              </div>
-
-              <div class="answer">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                  Utilizam o sistema de diárias nas cobranças das prestações de
+                  serviços?
                 </p>
-              </div>
-            </div>
-
-            <div class="question">
-              <div class="question-content">
-                <p>Lorem ipsum dolor sit amet consectetur?</p>
 
                 <img src="img/chevron-down.svg" class="down" alt="" />
               </div>
 
               <div class="answer">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                  cumque soluta autem quis, exercitationem repudiandae nemo. 002
+                  Não, após a realização do orçamento e a contratação dos
+                  serviços, o trabalho solicitado pelo contratante é realizado
+                  durante o tempo que for necessário sem ajustes ou cobrança de
+                  diárias.
                 </p>
               </div>
             </div>
