--- a/index.html
+++ b/index.html
@@ -310,7 +310,68 @@
         </div>
       </section>
 
-      <section id="contacts" class="contacts"></section>
+      <section id="contacts" class="contacts">
+        <div class="contacts-content">
+          <h1>Contatos</h1>
+          <div class="group-form-text">
+            <div class="form">
+              <h2>Faça um Orçamento!</h2>
+
+              <form action="">
+                <input
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Nome e Sobrenome"
+                />
+
+                <select name="" id="">
+                  <option value="null" selected>Selecione um serviço</option>
+                  <option value="">Poda estética</option>
+                  <option value="">Poda de manutenção</option>
+                  <option value="">Remoção de galhos perigosos</option>
+                  <option value="">Supressão</option>
+                </select>
+
+                <div class="street-num">
+                  <input type="text" name="" id="" placeholder="Rua" />
+                  <input type="number" name="" id="" placeholder="Nº" />
+                </div>
+
+                <input type="text" name="" id="" placeholder="Bairro" />
+                <input type="text" name="" id="" placeholder="Cidade" />
+
+                <input type="submit" value="Enviar" class="form-button" />
+              </form>
+            </div>
+
+            <div class="text-contact">
+              <article>
+                <h2>Queremos ouvir você!</h2>
+                <br />
+                <p>
+                  Entre em contato com a Ype Podas para obter mais informações
+                  sobre
+                  <strong>
+                    nossos serviços, solicitar um orçamento ou tirar alguma
+                    duvida.
+                  </strong>
+                </p>
+                <br />
+                <p>Aqui estão nossos meios de contato:</p>
+              </article>
+
+              <div class="group-icons">
+                <a href=""><img src="img/instagram.png" alt="" /></a>
+                <a href=""><img src="img/telefone.png" alt="" /></a>
+                <a href=""><img src="img/whatsapp.png" alt="" /></a>
+                <a href=""><img src="img/o-email.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section id="portifolio" class="portifolio"></section>
 
       <footer>
