Ajustes do footer

--- a/index.html
+++ b/index.html
@@ -362,10 +362,18 @@
               </article>
 
               <div class="group-icons">
-                <a href=""><img src="img/instagram.png" alt="" /></a>
-                <a href=""><img src="img/telefone.png" alt="" /></a>
-                <a href=""><img src="img/whatsapp.png" alt="" /></a>
-                <a href=""><img src="img/o-email.png" alt="" /></a>
+                <a href=""
+                  ><img src="img/instagram.png" alt="Icone de contato"
+                /></a>
+                <a href=""
+                  ><img src="img/telefone.png" alt="Icone de contato"
+                /></a>
+                <a href=""
+                  ><img src="img/whatsapp.png" alt="Icone de contato"
+                /></a>
+                <a href=""
+                  ><img src="img/o-email.png" alt="Icone de contato"
+                /></a>
               </div>
             </div>
           </div>
@@ -384,7 +392,7 @@
                 Somos a Ype Podas, uma equipe dedicada apaixonada por árvores e
                 comprometida em proporcionar serviços de poda excepcionais.
               </p>
-              <br />
+
               <p>
                 Desde 2023, temos deixado um legado verde por onde passamos.
                 Conheça nossa história e nossa missão de tornar o mundo mais
@@ -392,11 +400,19 @@
               </p>
             </article>
 
-            <div>
-              <i data-feather="instagram"></i>
-              <i data-feather="phone"></i>
-              <i data-feather="circle"></i>
-              <i data-feather="mail"></i>
+            <div class="contacts-icons">
+              <a href="">
+                <img src="img/instagram-branco.png" alt="Icone de contato" />
+              </a>
+              <a href="">
+                <img src="img/telefone-branco.png" alt="Icone de contato" />
+              </a>
+              <a href="">
+                <img src="img/whatsapp-branco.png" alt="Icone de contato" />
+              </a>
+              <a href="">
+                <img src="img/o-email-branco.png" alt="Icone de contato" />
+              </a>
             </div>
           </div>
 
@@ -412,28 +428,28 @@
 
           <div class="nav-footer">
             <nav>
+              <span><strong>Links Rápidos</strong></span>
               <ul>
-                <li><strong>Links Rápidos</strong></li>
                 <li>
-                  <a href=""><span>Início</span></a>
+                  <a href="#banner"><span>Início</span></a>
                 </li>
                 <li>
-                  <a href=""><span>Locais de Serviços</span></a>
+                  <a href="#about-us"><span>Sobre Nós</span></a>
                 </li>
                 <li>
-                  <a href=""><span>Sobre Nós</span></a>
+                  <a href="#services"><span>Serviços</span></a>
                 </li>
                 <li>
-                  <a href=""><span>Orçamentos</span></a>
+                  <a href="#benefits"><span>Benefícios</span></a>
                 </li>
                 <li>
-                  <a href=""><span>Benefícios</span></a>
+                  <a href="#faq"><span>FAQ</span></a>
                 </li>
                 <li>
-                  <a href=""><span>FAQ</span></a>
+                  <a href="#contacts"><span>Contatos</span></a>
                 </li>
                 <li>
-                  <a href=""><span>Portifólio</span></a>
+                  <a href="#portifolio"><span>Portifólio</span></a>
                 </li>
               </ul>
             </nav>
@@ -442,9 +458,7 @@
         <div class="copy"></div>
       </footer>
     </main>
-    <script>
-      feather.replace();
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
     <script src="main.js"></script>
   </body>
