Carrosel de imagens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <link
       rel="shortcut icon"
@@ -391,7 +390,54 @@
         </div>
       </section>
 
-      <section id="portifolio" class="portifolio"></section>
+      <section id="portifolio" class="portifolio">
+        <div class="portifolio-content">
+          <h1>Portifólio</h1>
+          <article>
+            <p>
+              <strong>
+                Veja o que conseguimos alcançar com nossos serviços de poda.
+              </strong>
+            </p>
+            <br />
+            <p>
+              Navegue por nosso portfólio e descubra como transformamos árvores
+              em verdadeiras obras de arte verde.
+            </p>
+          </article>
+
+          <div class="carousel">
+            <div class="carousel-container">
+              <img
+                src="img/carrosel-1.jpg"
+                class="carousel-item carousel-item-1"
+                data-index="1"
+              />
+              <img
+                src="img/carrosel-2.jpg"
+                class="carousel-item carousel-item-2"
+                data-index="2"
+              />
+              <img
+                src="img/carrosel-3.jpg"
+                class="carousel-item carousel-item-3"
+                data-index="3"
+              />
+              <img
+                src="img/carrosel-4.jpg"
+                class="carousel-item carousel-item-4"
+                data-index="4"
+              />
+              <img
+                src="img/carrosel-5.jpg"
+                class="carousel-item carousel-item-5"
+                data-index="5"
+              />
+            </div>
+            <div class="carousel-controls"></div>
+          </div>
+        </div>
+      </section>
 
       <footer>
         <div class="content-footer">
