Ajustes de layout

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 experiência e paixão, oferecemos serviços de poda de árvores que
                 elevam a estética e a saúde de seus espaços ao ar livre.
               </p>
-              <button>Faça seu Orçamento</button>
+              <button><a href="#contacts">Faça seu Orçamento</a></button>
             </div>
           </div>
 
@@ -122,7 +122,7 @@
             </p>
           </article>
 
-          <button>Solicitar Orçamento</button>
+          <button><a href="#contacts">Solicitar Orçamento</a></button>
         </div>
       </section>
 
