Resposividade Sobre-nos (1360)

--- a/index.html
+++ b/index.html
@@ -93,20 +93,22 @@
       </section>
 
       <section id="about-us" class="about-us">
-        <div class="text-about-us">
-          <article>
-            <h1>Sobre nós</h1>
-            <p>
-              Somos a Ype Podas, uma equipe dedicada apaixonada por árvores e
-              comprometida em proporcionar serviços de poda excepcionais.
-              <br /><br />
-              Desde 2023, temos deixado um legado verde por onde passamos.
-              Conheça nossa história e nossa missão de tornar o mundo mais
-              verde, um galho de cada vez.
-            </p>
-          </article>
+        <div class="about-us-content">
+          <div class="text-about-us">
+            <article>
+              <h1>Sobre nós</h1>
+              <p>
+                Somos a Ype Podas, uma equipe dedicada apaixonada por árvores e
+                comprometida em proporcionar serviços de poda excepcionais.
+                <br /><br />
+                Desde 2023, temos deixado um legado verde por onde passamos.
+                Conheça nossa história e nossa missão de tornar o mundo mais
+                verde, um galho de cada vez.
+              </p>
+            </article>
+          </div>
+          <div class="img-about-us"><img src="img/sobre-nos.png" alt="" /></div>
         </div>
-        <div class="img-about-us"><img src="img/sobre-nos.png" alt="" /></div>
       </section>
 
       <section id="quote-call" class="quote-call">
