--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="cards-services">
               <p>Poda Estética</p>
               <img
-                src="img/BANNER_SERVIÇOS--Poda-de-Manutenção.png"
+                src="img/BANNER_SERVIÇOS--Poda-Estética.png"
                 alt="Serviço Oferecido"
               />
               <div class="circle-services"></div>
