--- a/index.html
+++ b/index.html
@@ -16,12 +16,43 @@
       <header>
         <nav>
           <ul>
-            <li><a href="#banner">Início</a></li>
-            <li><a href="#about-us">Sobre nós</a></li>
-            <li><a href="#services">Serviços</a></li>
-            <li><a href="#benefits">Benefícios</a></li>
-            <li><a href="#faq">FAQ</a></li>
-            <li><a href="#contacts">Contatos</a></li>
+            <li>
+              <a href="#banner">
+                <img src="img/botao-de-inicio.png" alt="" />
+                <span>Início</span>
+              </a>
+            </li>
+            <li>
+              <a href="#about-us">
+                <img src="img/simbolo-de-informacao.png" alt="" />
+                <span>Sobre nós</span>
+              </a>
+            </li>
+            <li>
+              <a href="#services">
+                <img src="img/serra-eletrica.png" alt="" />
+                <span>Serviços</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#benefits">
+                <img src="img/folha.png" alt="" />
+                <span>Benefícios</span>
+              </a>
+            </li>
+            <li>
+              <a href="#faq">
+                <img src="img/ponto-de-interrogacao-nav.png" alt="" />
+                <span>FAQ</span>
+              </a>
+            </li>
+            <li>
+              <a href="#contacts">
+                <img src="img/telefone-nav.png" alt="" />
+                <span>Contatos</span>
+              </a>
+            </li>
             <li>
               <button>
                 <a href="#contacts">Orçamento</a>
