Criação da Seção Atuação

--- a/index.html
+++ b/index.html
@@ -211,7 +211,36 @@
         </div>
       </section>
 
-      <section id="quote-call-ii" class="quote-call-ii"></section>
+      <section id="acting" class="acting">
+        <div class="acting-content">
+          <div class="acting-text">
+            <article>
+              <h1>Onde atuamos</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita, sed! Eos obcaecati velit, assumenda, maiores rem
+                voluptas vitae laborum placeat temporibus alias molestiae nobis
+                neque ad voluptatem voluptates? Dolore, sunt.
+              </p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
+                quod placeat nesciunt.
+              </p>
+            </article>
+          </div>
+          <div class="acting-map">
+            <iframe
+              class="map"
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d142797.62911664898!2d-44.044098093403086!3d-19.876173032884015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sregi%C3%A3o%20metropolitana%20de%20belo%20horizonte%20cidades!5e0!3m2!1spt-BR!2sbr!4v1710183646512!5m2!1spt-BR!2sbr"
+              width="600"
+              height="450"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </section>
 
       <section id="benefits" class="benefits">
         <div class="content-benefits">
