Texto da seção Atuacao

--- a/index.html
+++ b/index.html
@@ -217,22 +217,21 @@
             <article>
               <h1>Onde atuamos</h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Expedita, sed! Eos obcaecati velit, assumenda, maiores rem
-                voluptas vitae laborum placeat temporibus alias molestiae nobis
-                neque ad voluptatem voluptates? Dolore, sunt.
+                Nós da Ype Podas atuamos, principalmente, na cidade de Belo
+                Horizonte - Minas Gerais, mas realizamos serviços também nas
+                principais cidades da região metropolitana.
               </p>
               <br />
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi
-                quod placeat nesciunt.
+                Sua cidade não se encontra dentro dessa lista? Entre em contato
+                conosco e consulte as condições para que possamos lhe atender.
               </p>
             </article>
           </div>
           <div class="acting-map">
             <iframe
               class="map"
-              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d142797.62911664898!2d-44.044098093403086!3d-19.876173032884015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sregi%C3%A3o%20metropolitana%20de%20belo%20horizonte%20cidades!5e0!3m2!1spt-BR!2sbr!4v1710183646512!5m2!1spt-BR!2sbr"
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d120037.91248931784!2d-44.01026557440616!3d-19.916610813652234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sregi%C3%A3o%20metropolitana%20de%20belo%20horizonte%20cidades!5e0!3m2!1spt-BR!2sbr!4v1710445242954!5m2!1spt-BR!2sbr"
               width="600"
               height="450"
               allowfullscreen=""
