Ajuste de margens

--- a/index.html
+++ b/index.html
@@ -291,10 +291,7 @@
         <div class="faq-content">
           <div class="faq-text">
             <article>
-              <h1>
-                Perguntas <br />
-                Frequentes
-              </h1>
+              <h1>Perguntas Frequentes</h1>
               <p>Tire suas dúvidas sobre poda de árvores!</p>
 
               <p>
